--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,50 @@
-body {
-    background-color: #632741;
-  }
+.grid-container{
+    display: grid;
+    grid-template-rows: 2fr, 1fr, 3fr, 2fr, 1fr, 1fr;
+    border: red solid 2pt;
+}
 
 .logo {
     height: 200px;
-    width: 100%;
+    width: 30%;
+    grid-row: 1/2;
+    justify-self: center;
+}
+
+.nav{
+    justify-self: center;
+    grid-row: 2/3;
+    font-size: 20pt;
+}
+
+.section-one {
+    grid-row: 3/4;
+}
+
+.section-two{
+    grid-row: 4/5;
+    grid-template-columns: 2fr, 1fr, 1fr, 1fr, 2fr;
+}
+
+.image-one{
+    grid-row: 4/5;
+    grid-column: 2/3;
+}
+
+.image-two{
+    grid-row: 4/5;
+    grid-column: 3/4;
+}
+
+.image-three{
+    grid-row: 4/5;
+    grid-column: 4/5;
+}
+
+.footer{
+    grid-row: 5/6;
+    justify-self: center;
+    font-size: 20pt;
 }
 
 li {
@@ -35,9 +75,3 @@ img {
     list-style-type: none;
     padding: 5px;
 }
-
-section {
-    display: flex;
-    justify-content: center;
-}
-
