--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .grid-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 2fr 4fr 2fr .5fr;
+    grid-template-rows: .75fr 2fr 1fr .25fr;
     grid-template-areas: 
     "header header header"
     "list list list"
@@ -11,11 +11,12 @@
 
 body {
     font-family: 'Krona One', sans-serif;
+    margin:0;
 }
 
 header {
     grid-area: header;
-    background-color: blue;
+    background-color:#F7F8F7;
 }
 
 .section-one {
@@ -24,18 +25,64 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 1000px;
+    height: 1200px;
 }
 
 .section-two {
     grid-area: images;
-    background-color: green;
+    background-color: #F7F8F7;
 }
 
 .footer {
     grid-area: footer;
-    background-color: hotpink;
+    background-color: #632741;
+    padding:.5% 42%;
+    text-align: center;
 }
+
+/* Nav and Logo */
+
+.logo {
+    display: block;    
+    padding: 4px;    
+    width: 550px;    
+    margin-left: auto;    
+    margin-right: auto;
+}
+
+.nav {
+    height: 15%;
+    color: #F7F8F7;
+    font-size: 25px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    width: 100%; 
+    text-decoration: none;
+}
+
+a:visited {
+    color: #CEB458;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:link {
+    color: #CEB458;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+.nav > a {
+   margin-left: 200px;
+}
+
+.nav a:hover {
+    border-bottom: 5px solid #632741;
+    color:#632741;
+}
+
+/* background image and text box styles */
 
 ul{
     margin-left: 65%;
@@ -51,91 +98,74 @@ li {
     text-align: left;
     padding: 30pt;
     background-color:#1A455D;
-    opacity: .8;
+    opacity: .9;
     margin: 15pt;
-    color: white;
+    color: #F7F8F7;
+    border-radius: 6px;
 }
 
 button {
     margin-left: 73%;
+    background-color:#4F99A4;
+    color:  #F7F8F7;
+    padding: 20px 50px;
+    font-size: 25px;
+    border-radius: 12px;
+    font-style: bold;
 }
+
+button:hover{
+    color: #1A455D;
+}
+
+/* Image Styles */
 
 .all-caps {
     font-size: 23pt;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .logo {
-    height: 200px;
-    width: 30%;
-    grid-row: 1/2;
-    justify-self: center;
-}
-
-.nav{
-    justify-self: center;
-    grid-row: 2/3;
-    font-size: 20pt;
-}
-
-.section-one {
-    grid-row: 3/4;
-}
-
-.section-two{
-    grid-row: 4/5;
-   
-}
-
-.image-one{
-    grid-row: 4/5;
-    grid-column: 2/3;
-}
-
-.image-two{
-    grid-row: 4/5;
-    grid-column: 3/4;
-}
-
-.image-three{
-    grid-row: 4/5;
-    grid-column: 4/5;
-}
-
-.footer{
-    grid-row: 5/6;
-    justify-self: center;
-    font-size: 20pt;
-}
-
-
-.all-caps {
-    background-color: black;
-    color: white;
-    font-size: 12pt;
-}
-
-img {
-    height: 10%;
-    width: 10%;
-}
-
-.content-text {
+.image-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    list-style-type: none;
-    padding: 5px;
-} */
+    align-content: center;
+    position: relative;
+}
+
+.column {
+    flex: 33.33%;
+    text-align: center;
+}
+
+.image-gallery {
+    height: 450px;
+    width: 450px;
+    margin-top: 45px;
+    border-radius: 15px;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.gallery-transition {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%) 
+}
+
+.column:hover .image-gallery {
+    opacity: 0.6;
+}
+
+/* Footer Styles */
+
+.smLinks > a {
+    padding: 10px;
+    font-size: 35pt;
+    text-align: center;
+}
+ 
+ footer > small {
+     color: #F7F8F7;
+}
