--- a/gallery/gallery-styles.css
+++ b/gallery/gallery-styles.css
@@ -1,10 +1,12 @@
 .grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: .5fr 2fr .5fr;
+    grid-template-columns:  1fr 1fr 1fr;
+    grid-template-rows: .5fr 1fr 1fr 1fr .25fr;
     grid-template-areas: 
     "header header header"
-    "gallery gallery gallery"
+    "img1 img1 img1"
+    "img2 img2 img2"
+    "img3 img3 img3"
     "footer footer footer";
 }
 
@@ -13,14 +15,46 @@ body {
     margin:0;
 }
 
+.margins {
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
 .header {
     grid-area: header;
     background-color:#F7F8F7;
 }
 
-.gallery {
-    grid-area: gallery;
-    background-color:blue;
+.image-container1 {
+    grid-area: img1;
+    background-color:#F7F8F7;
+    display: flex;
+    flex-direction: row;
+    padding-top: 40pt;
+}
+
+.image-container2 {
+    grid-area: img2;
+    background-color:#F7F8F7;
+    display: flex;
+    flex-direction: row;
+    padding-top: 20pt;
+}
+
+.image-container3 {
+    grid-area: img3;
+    background-color:#F7F8F7;
+    display: flex;
+    flex-direction: row;
+}
+
+.column {
+    flex: 33.33%;
+    text-align: center;
+}
+
+.border {
+    border: 4px solid #1A455D;
 }
 
 .footer {
@@ -64,8 +98,9 @@ a:link {
 }
 
 .nav > a {
-   margin-left: 200px;
-}
+    margin:0 30pt;
+    padding-bottom: 15pt;
+ }
 
 .nav a:hover {
     border-bottom: 5px solid #632741;
