--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .grid-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: .75fr 2fr 1fr .25fr;
+    grid-template-rows: .80fr 1.75fr 1fr .25fr;
     grid-template-areas: 
     "header header header"
     "list list list"
@@ -12,6 +12,11 @@
 body {
     font-family: 'Krona One', sans-serif;
     margin:0;
+}
+
+.margins {
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 header {
@@ -25,7 +30,8 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 1200px;
+    height: 1100px;
+    margin-bottom: 0;
 }
 
 .section-two {
@@ -74,8 +80,9 @@ a:link {
 }
 
 .nav > a {
-   margin-left: 200px;
-}
+    margin:0 30pt;
+    padding-bottom: 15pt;
+ }
 
 .nav a:hover {
     border-bottom: 5px solid #632741;
@@ -138,10 +145,11 @@ button:hover{
 .image-gallery {
     height: 450px;
     width: 450px;
-    margin-top: 45px;
     border-radius: 15px;
     transition: .5s ease;
     backface-visibility: hidden;
+    padding-top: 50pt;
+    margin-top: 0;
 }
 
 .gallery-transition {
