--- a/styles.css
+++ b/styles.css
@@ -1,182 +1,95 @@
-.grid-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: .80fr 1.75fr 1fr .25fr;
-    grid-template-areas: 
-    "header header header"
-    "list list list"
-    "images images images"
-    "footer footer footer";
-}
-
 body {
-    font-family: 'Krona One', sans-serif;
-    margin:0;
+  font-family: 'Krona One', sans-serif;
+  margin:0;
+  background-color:#F7F8F7;
+  color:#1A455D;
 }
 
 .margins {
-    margin-left: 15%;
-    margin-right: 15%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-header {
-    grid-area: header;
-    background-color:#F7F8F7;
+button {
+  margin-left: 72%;
+  background-color:#4F99A4;
+  padding: 20px 50px;
+  font-size: 25px;
+  border-radius: 12px;
+  font-style: bold;
 }
 
-.section-one {
-    grid-area: list;
-    background-image: url("./images/main-image.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 1100px;
-    margin-bottom: 0;
+button  a{
+  color: #F1F3F2;
+  text-decoration:none;
 }
 
-.section-two {
-    grid-area: images;
-    background-color: #F7F8F7;
-}
-
-.footer {
-    grid-area: footer;
-    background-color: #632741;
-    padding:.5% 42%;
-    text-align: center;
+button a:hover{
+  color: #1A455D;
 }
 
 /* Nav and Logo */
 
 .logo {
-    display: block;    
-    padding: 4px;    
-    width: 550px;    
-    margin-left: auto;    
-    margin-right: auto;
+  display: block;
+  padding: 4px;
+  width: 350px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .nav {
-    color: #F7F8F7;
-    font-size: 25px;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    width: 100%; 
-    text-decoration: none;
+  color: #F7F8F7;
+  font-size: 25px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  text-decoration: none;
 }
 
-a:visited {
-    color: #CEB458;
-    background-color: transparent;
-    text-decoration: none;
+nav a:visited {
+  color: #CEB458;
+  background-color: transparent;
+  text-decoration: none;
 }
 
 a:link {
-    color: #CEB458;
-    background-color: transparent;
-    text-decoration: none;
+  color: #CEB458;
+  background-color: transparent;
+  text-decoration: none;
 }
 
 .nav > a {
-    margin:0 30pt;
-    padding-bottom: 15pt;
+  margin:0 30pt;
+  padding-bottom: 15pt;
+  color: #C6A531;
 }
 
 .nav a:hover {
-    border-bottom: 5px solid #632741;
-    color:#632741;
-}
-
-/* background image and text box styles */
-
-ul{
-    margin-left: 65%;
-    list-style: none;
-    margin-right: 9%;
-    margin-top: 15%;
-}
-
-li {
-    height: 50px;
-    width: 75%;
-    font-size: 12pt;
-    text-align: left;
-    padding: 30pt;
-    background-color:#1A455D;
-    opacity: .9;
-    margin: 15pt;
-    color: #F7F8F7;
-    border-radius: 6px;
-}
-
-button {
-    margin-left: 72%;
-    background-color:#4F99A4;
-    color:  #F7F8F7;
-    padding: 20px 50px;
-    font-size: 25px;
-    border-radius: 12px;
-    font-style: bold;
-}
-
-button:hover{
-    color: #1A455D;
-}
-
-/* Image Styles */
-
-.all-caps {
-    font-size: 23pt;
-}
-
-.li-all-caps {
-    font-size: 19pt;
-}
-
-.image-container {
-    display: flex;
-    align-content: center;
-    position: relative;
-}
-
-.column {
-    flex: 33.33%;
-    text-align: center;
-}
-
-.image-gallery {
-    height: 450px;
-    width: 450px;
-    border-radius: 15px;
-    transition: .5s ease;
-    backface-visibility: hidden;
-    padding-top: 50pt;
-    margin-top: 0;
-}
-
-.gallery-transition {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%) 
-}
-
-.column:hover .image-gallery {
-    opacity: 0.6;
+  color:#632840;
 }
 
 /* Footer Styles */
 
-.smLinks > a {
-    padding: 10px;
-    font-size: 35pt;
-    text-align: center;
+.footer {
+  grid-area: footer;
+  background-color: #632741;
+  text-align: center;
+  padding: 1% 10%;
 }
- 
+
+.smLinks > a {
+  padding: 5px;
+  font-size: 25pt;
+  text-align: center;
+  text-decoration:none;
+}
+
+.smLinks a:visited{
+  color:#F1F3F2;
+}
+
 footer > small {
-    color: #F7F8F7;
+  color: #F7F8F7;
 }
