last min updates from seeing hosted site.

--- a/about/about-styles.css
+++ b/about/about-styles.css
@@ -35,7 +35,7 @@ h1 {
     color: #F7F8F7;
     font-size: 35px;
     text-align: center;
-    margin: 0 250px;
+    margin: 10px 250px;
     padding: 30px;
     width:100%;
 }
